l5e-eb/nats-instance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eb-ingress
  namespace: l5e
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: "eb.jinora.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: l5e-eb-headless
                port:
                  number: 8222 # Routing to the HTTP Monitoring dashboard
